Add providers handler
