# docs/swagger.json
@@ -29,6 +29,29 @@
                     }
                 }
             }
+        },
+        "/providers": {
+            "get": {
+                "description": "Returns object with provider names as keys and provider information as values",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "providers"
+                ],
+                "summary": "Get all providers",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "$ref": "#/definitions/models.Provider"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -85,6 +108,17 @@
                 },
                 "upload": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.Provider": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
                 }
             }
         }
