# internal/models/provider.go
@@ -1,0 +1,6 @@
+package models
+
+type Provider struct {
+	Link        string `json:"link"`
+	Description string `json:"description,omitempty"`
+}
